tests/tests2/66_macro_concat_end.expect
66_macro_concat_end.c:1: error: '##' invalid at end of macro
